--- a/canlender_app/src/App.css
+++ b/canlender_app/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #257018;
   height: 150px;
   padding: 20px;
   color: white;
@@ -22,20 +22,68 @@
   font-size: large;
 }
 
-.rowC{
-  display:flex;
-  flex-direction:row;
+.rowC {
+  display: flex;
+  flex-direction: row;
   text-align: center;
   padding: 20px;
-
 }
+
+.getCalenderButton{
+  margin-top: 20px;
+  text-align: center;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+.createNewCalenderButton{
+  margin-top: 50px;
+  text-align: center;
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 12px;
+}
+
+
+
+.demoFont {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.4px;
+  word-spacing: 1px;
+  color: #000000;
+  font-weight: 400;
+  text-decoration: none solid rgb(68, 68, 68);
+  font-style: normal;
+  font-variant: normal;
+  text-transform: none;
+}
+
+
 .center{
-  width: 500px;
-  height: 100px;
+  width: 800px;
+  height: 200px;
   display:flex;
   flex-direction:column;
   text-align: center;
-  padding: 0px 80px 0px 100px;;
+  padding: 10px 10px 10px 10px;
+  border: 3px solid rgba(63,145,12,0.36);
+  background: rgba(49,148,32,0.13) none no-repeat fixed 50px 43px;
+  margin-right: 50px;
+  margin-left: 50px;
 
 
 }
