--- a/canlender_app/src/App.css
+++ b/canlender_app/src/App.css
@@ -85,8 +85,45 @@
   margin-right: 50px;
   margin-left: 50px;
 
+}
+
+.bar{
+  margin-top: 50px;
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+
 
 }
+.radiogroup{
+  width: 300px;
+  height: 10px;
+}
+
+.barbutton{
+  width: 300px;
+  height: 50px;
+  background-color: #4CAF50; /* Green */
+  display: inline-block;
+  text-align: center;
+  padding: 10px 10px 10px 10px;
+  border: 3px solid rgba(63,145,12,0.36);
+  margin-right: 25px;
+  margin-left: 25px;
+  font-size: 16px;
+  border-radius: 12px;
+  color: white;
+
+}
+
+.barlabel{
+  width: 25px;
+  height: 25px;
+
+}
+
+
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
